# pdfparser2

./: CMakeLists.txt  README.md  main.cpp
src/: pdfparser.cpp  pdfparser.h
src/custombuffer/: custombuffer.cpp  custombuffer.hpp
src/customfunctions/: customfunction.cpp  customfunction.h
